--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,10 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" th:href="@{/}">Books</a></li>
+          <li class="nav-item"><a class="nav-link" th:href="@{/role}">New Role</a></li>
+          <li class="nav-item"><a class="nav-link" th:href="@{/role/list}">Role List</a></li>
+          <li class="nav-item"><a class="nav-link" th:href="@{/user}">New User</a></li>
+          <li class="nav-item"><a class="nav-link" th:href="@{/user/list}">User List</a></li>
         </ul>
       </div>
     </div>
