--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,7 +2,10 @@
 <html lang="en" th:fragment="layout (content)" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head.html :: head}"></head>
 <body>
-    <header th:replace="~{fragments/header.html :: header}"></header>
+<script th:src="@{/js/jquery.min.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/js/bootstrap.min.js" integrity="sha512-7rusk8kGPFynZWu26OKbTeI+QPoYchtxsmPeBqkHIEXJxeun4yJ4ISYe7C6sz9wdxeE1Gk3VxsIWgCZTc+vX3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<header th:replace="~{fragments/header.html :: header}"></header>
     <main th:replace="${content}"></main>
 </body>
 </html>
