--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      xmlns="http://www.w3.org/1999/html">
 <body>
 <header th:fragment="header">
   <div class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a class="navbar-brand" th:href="@{/}">Book Store</a>
+      <a class="navbar-brand" th:href="@{/user/home}">Book Store</a>
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" th:href="@{/role}">New Role</a></li>
           <li class="nav-item"><a class="nav-link" th:href="@{/role/list}">Role List</a></li>
-          <li class="nav-item"><a class="nav-link" th:href="@{/user}">New User</a></li>
           <li class="nav-item"><a class="nav-link" th:href="@{/user/list}">User List</a></li>
         </ul>
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+            <a class="nav-link dropdown-toggle" sec:authentication="name" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ></a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" th:href="@{/user/profile}" sec:authorize="isAuthenticated()" style="color: green;" >Profile</a>
+              <a class="dropdown-item" th:href="@{/logout}" sec:authorize="isAuthenticated()" style="color: tomato;" >Sign out</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/user/register}" sec:authorize="!isAuthenticated()" style="color: lightgreen;">Register</a>
+          </li>
+        </ul>
+
       </div>
     </div>
   </div>
