--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
   <main role="main">
     <div class="container text-center bg-light border rounded-3 mt-3" style="min-height: 700px;">
 
-      <form th:action="@{/login}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
+      <form th:action="@{/user/login}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
 
         <div class="alert alert-danger" th:if="${param.error}">
           Invalid Email or Password.
@@ -31,8 +31,8 @@
             </div>
           </div>
 
-          <butto class="btn btn-primary btn-md" type="submit" style="width: 240px;">Login</butto>
-          <p class="mt-3 mb-0">Join us today! Register now. <a th:href="@{/register}" class="text-primary">Register</a> </p>
+          <button class="btn btn-primary btn-md" type="submit" style="width: 240px;">Login</button>
+          <p class="mt-3 mb-0">Join us today ! <a th:href="@{/user/register}" class="text-primary">Register Now</a> </p>
 
         </div>
       </form>
