--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -3,11 +3,19 @@
 
 <body>
 <main role="main">
-  <div class="container text-center bg-light border rounded-3 mt-3" style="min-height: 700px;">
+  <div class="container text-center bg-light border rounded-3" style="min-height: 700px;">
 
-    <form th:action="@{/register}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
+    <form th:action="@{/user/register}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
 
       <div class="border border-secondary p-3 rounded" >
+        <div class="row">
+          <div class="col-md-12 d-flex mb-3">
+            <label for="name" class="col-md-4 col-form-label"> UserName <i class="fa-solid fa-user fa-lg"></i></label>
+            <div class="col-md-6">
+              <input type="text" class="form-control" th:field="*{name}" id="name" />
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-12 d-flex mb-3">
             <label for="email" class="col-md-4 col-form-label"> Email <i class="fa-solid fa-user fa-lg"></i></label>
@@ -20,12 +28,12 @@
           <div class="col-md-12 d-flex mb-3">
             <label for="password" class="col-md-4 col-form-label"> Password <i class="fa-solid fa-user fa-lg"></i></label>
             <div class="col-md-6">
-              <input type="text" class="form-control" th:field="*{password}" id="password" />
+              <input type="password" class="form-control" th:field="*{password}" id="password" />
             </div>
           </div>
         </div>
         <button class="btn btn-primary btn-md" type="submit" style="width: 240px;" >Register</button>
-        <p class="mt-3 mb-0">Already have an account? <a th:href="@{/login}" class="text-primary">Login</a></p>
+        <p class="mt-3 mb-0">Already have an account? <a th:href="@{/user/login}" class="text-primary">Login</a></p>
       </div>
 
     </form>
