fix login and register

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -3,9 +3,9 @@
 
 <body>
 <main role="main">
-  <div class="container text-center bg-light border rounded-3" style="min-height: 700px;">
+  <div class="container text-center bg-light border rounded-3" style="height: 515px;">
 
-    <form th:action="@{/user/register}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
+    <form th:action="@{/user/register}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 11rem auto;" >
 
       <div class="border border-secondary p-3 rounded" >
         <div class="row">
