--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,9 +3,9 @@
 
 <body>
   <main role="main">
-    <div class="container text-center bg-light border rounded-3 mt-3" style="min-height: 700px;">
+    <div class="container text-center bg-light border rounded-3 mt-3" style="height: 500px;">
 
-      <form th:action="@{/user/login}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 15rem auto;" >
+      <form th:action="@{/user/login}" method="post" th:object="${userDTO}" style="max-width: 500px; margin: 11rem auto;" >
 
         <div class="alert alert-danger" th:if="${param.error}">
           Invalid Email or Password.
